fixed spacing for tabs

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -865,7 +865,7 @@ textarea {
 
 .tab {
   position: fixed;
-  top: var(--navbar-height);
+  top: 62px;
   height: var(--tabs-height);
   display: flex;
   width: calc(100% - var(--sidebar-width));
